# Hunyuan3D-Part-cdc

./: CAMERA_MODES_GUIDE.md  CAMERA_UTILS_INTEGRATION.md  CHANGELOG_EXPLODE.md  EXPLODE_RENDER_README.md  LABEL_IMPROVEMENTS.md  LATEST_FIXES.md  P3SAM_IMPORT_GUIDE.md  P3SAM_PACKAGE_SETUP.md  QUICK_START_EXPLODE.md  README.md  example_explode_render.sh  explode_and_render.py  explode_automask_results.py  install_p3sam.sh  reinstall_p3sam.sh  test_p3sam_install.py
P3-SAM/: .gitignore  INSTALL.md  MANIFEST.in  __init__.py  model.py  pyproject.toml  setup.py
P3-SAM/demo/: __init__.py  app.py  auto_mask.py  auto_mask_no_postprocess.py  gradio_demo.py
P3-SAM/demo/assets/: bamboo_cabinet.glb  cabinet.glb  laptop.glb  open_cabinet.glb
P3-SAM/utils/: __init__.py
XPart/: .gitignore  README.md  demo.py  gradio_demo.py  requirements.txt
XPart/partgen/: partformer_pipeline.py
XPart/partgen/bbox_estimator/: auto_mask_api.py
XPart/partgen/config/: infer.yaml  infer_original.yaml
XPart/partgen/models/sonata/: model.py
XPart/partgen/utils/: camera_utils.py  mesh_utils.py  misc.py
