[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "p3sam"
version = "1.0.0"
description = "P3-SAM: Native 3D Part Segmentation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Changfeng Ma"},
    {name = "Yang Li"},
    {name = "Xinhao Yan"},
]
keywords = ["3D", "segmentation", "deep-learning", "point-cloud", "mesh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "trimesh>=3.9.0",
    "scikit-learn>=1.0.0",
    "fpsample>=0.1.0",
    "tqdm>=4.60.0",
    "numba>=0.55.0",
    "safetensors>=0.3.0",
    "Pillow>=9.0.0",
    "addict",
    "google-genai",
    "vertexai"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
demo = [
    "viser>=0.1.0",
    "gradio>=3.0.0",
]

[project.urls]
Homepage = "https://murcherful.github.io/P3-SAM/"
Repository = "https://github.com/tencent/Hunyuan3D-Part"
Documentation = "https://murcherful.github.io/P3-SAM/"

[project.scripts]
p3sam-auto-mask = "demo.auto_mask:main"
p3sam-app = "demo.app:main"

[tool.setuptools]
# Map the P3-SAM directory to p3sam package
package-dir = {"p3sam" = "."}
packages = ["p3sam", "p3sam.demo", "p3sam.utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

